2007-03-28  Richard Sandiford  <richard@codesourcery.com>
	    Phil Edwards  <phil@codesourcery.com>

	* doc/as.texinfo: Put the contents after the title page rather
	than at the end of the document.

2007-03-27  Alan Modra  <amodra@bigpond.net.au>

	* NEWS: Mention ".reloc".

2007-03-26  Sterling Augustine  <sterling@tensilica.com>
	
	* config/tc-xtensa.c (xg_translate_idioms): Allow assembly idioms
	in FLIX instructions.
	
2007-03-26  Julian Brown  <julian@codesourcery.com>

	* config/tc-arm.c (arm_it): Add immisfloat field.
	(parse_qfloat_immediate): Disallow integer syntax for floating-point
	immediates. Fix hex immediates, handle 0.0 and -0.0 specially.
	(parse_neon_mov): Set immisfloat bit for operand if it parsed as a
	float.
	(neon_cmode_for_move_imm): Reject non-float immediates for float
	operands.
	(neon_move_immediate): Pass immisfloat bit to neon_cmode_for_move_imm.

2007-03-26  Julian Brown  <julian@codesourcery.com>

	* doc/c-arm.texi: Add documentation for .dn/.qn directives.

2007-03-26  Alan Modra  <amodra@bigpond.net.au>

	* doc/as.texinfo (Reloc): Document.
	* read.c (potable): Add "reloc".
	(s_reloc): New function.
	* write.c (reloc_list): New global var.
	(resolve_reloc_expr_symbols): New function.
	(write_object_file): Call it.
	(write_relocs): Process reloc_list.
	* write.h (struct reloc_list): New.
	(reloc_list): Declare.

2007-03-24  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (do_t_ldmstm): Error on Thumb-2 addressing modes.

2007-03-24  Paul Brook  <paul@codesourcery.com>
	Mark Shinwell  <shinwell@codesourcery.com>

	* config/tc-arm.c (operand_parse_code): Add OP_oRRw.
	(parse_operands): Don't expect comma if first operand missing.
	Handle OP_oRRw.
	(do_srs): Encode register number, checking it is r13.  Update comment.
	(insns): Update SRS entries to take a register.

2007-03-23  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (md_begin): Allow '.' in mnemonic.

2007-03-23  Mark Shinwell  <shinwell@codesourcery.com>
