@@ -1,6 +1,14 @@
+2007-03-28  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* i386-opc.c (i386_optab): Change InvMem to RegMem for mov and
+	movq.  Remove InvMem from sldt, smsw and str.
+
+	* i386-opc.h (InvMem): Renamed to ...
+	(RegMem): Update comments.
+	(AnyMem): Remove InvMem.
+
 2007-03-27  Paul Brook  <paul@codesourcery.com>
 
-	opcodes/
 	* arm-dis.c (thumb_opcodes): Add entry for undefined insns (0xbe??).
 
 2007-03-24  Paul Brook  <paul@codesourcery.com>
@@ -9,7 +17,7 @@
 	(print_insn_coprocessor): Handle %<bitfield>x.
 
 2007-03-24  Paul Brook  <paul@codesourcery.com>
-	Mark Shinwell  <shinwell@codesourcery.com>
+	    Mark Shinwell  <shinwell@codesourcery.com>
 
 	* arm-dis.c (arm_opcodes): Print SRS base register.
 
